--- a/Diagnosis.Client.App/Windows/Shell/MainWindow.xaml
+++ b/Diagnosis.Client.App/Windows/Shell/MainWindow.xaml
@@ -70,11 +70,9 @@
     </Window.Resources>
 
     <Window.InputBindings>
-        <KeyBinding Modifiers="Control"
-                    Key="F"
+        <KeyBinding Gesture="Control+F"
                     Command="{Binding OpenSearchCommand}" />
-        <KeyBinding Modifiers="Control"
-                    Key="E"
+        <KeyBinding Gesture="Control+E"
                     Command="{Binding FocusOnFilterCommand}" />
         <KeyBinding Key="F1"
                     Command="{Binding MenuBar.OpenHelpCommand}" />
