vocs. Add VocabularyEditor

--- a/Diagnosis.Server.App/Windows/MainWindow.xaml
+++ b/Diagnosis.Server.App/Windows/MainWindow.xaml
@@ -28,6 +28,9 @@
     </Window.Resources>
     <Grid>
         <TabControl>
+            <TabItem Header="Словари">
+                <screens:Vocabularies />
+            </TabItem>
             <TabItem Header="Синхронизация">
                 <screens:Sync />
             </TabItem>
