--- a/Diagnosis.Client.App/Windows/Shell/MainWindow.xaml
+++ b/Diagnosis.Client.App/Windows/Shell/MainWindow.xaml
@@ -56,7 +56,7 @@
             <DataTemplate DataType="{x:Type diag:SyncViewModel}">
                 <screen:Sync />
             </DataTemplate>
-            <DataTemplate DataType="{x:Type diag:VocabularyListViewModel}">
+            <DataTemplate DataType="{x:Type diag:VocabularySyncViewModel}">
                 <screen:Vocabs />
             </DataTemplate>
             <DataTemplate DataType="{x:Type diag:UndoOverlayViewModel}">
