--- a/Diagnosis.Server.App/Screens/Vocabularies.xaml
+++ b/Diagnosis.Server.App/Screens/Vocabularies.xaml
@@ -1,42 +1,47 @@
-﻿<UserControl x:Class="Diagnosis.Server.App.Screens.Specialities"
+﻿<UserControl x:Class="Diagnosis.Server.App.Screens.Vocabularies"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:design="clr-namespace:Diagnosis.Server.App.DesignData"
              xmlns:diag="http://schemas.smg.com/diagnosis"
              mc:Ignorable="d"
              Padding="{StaticResource SreenPadding}"
-             d:DataContext="{d:DesignInstance diag:SpecialityListViewModel, IsDesignTimeCreatable=False}"
+             d:DataContext="{d:DesignInstance diag:VocabularyListViewModel,
+                                              IsDesignTimeCreatable=False}"
              d:DesignHeight="300"
              d:DesignWidth="600">
     <UserControl.Resources>
     </UserControl.Resources>
 
-    <DockPanel x:Name="specialities">
+    <DockPanel x:Name="vocs">
         <DockPanel.Resources>
             <InputBindingCollection x:Shared="False"
-                                    x:Key="SpecInputBindings">
+                                    x:Key="VocInputBindings">
                 <KeyBinding Key="Enter"
-                            Command="{Binding DataContext.EditCommand, ElementName=specialities}" />
-                <MouseBinding  MouseAction="LeftDoubleClick"
-                               Command="{Binding DataContext.EditCommand, ElementName=specialities}" />
+                            Command="{Binding DataContext.EditCommand,
+                                              ElementName=vocs}" />
+                <MouseBinding MouseAction="LeftDoubleClick"
+                              Command="{Binding DataContext.EditCommand,
+                                                ElementName=vocs}" />
             </InputBindingCollection>
         </DockPanel.Resources>
         <Grid MaxWidth="180"
-              IsEnabled="{Binding Editor,Converter={StaticResource IsNullToBoolean}}">
+              IsEnabled="{Binding Editor,
+                                  Converter={StaticResource IsNullToBoolean}}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="36" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
 
-            <Label Content="Специальности"
+            <Label Content="Словари"
                    VerticalAlignment="Bottom" />
 
             <ListBox Grid.Row="1"
-                     ItemsSource="{Binding Specialities}"
+                     ItemsSource="{Binding Vocs}"
                      BorderThickness="1"
-                     SelectedItem="{Binding SelectedSpeciality}">
+                     SelectedItem="{Binding SelectedVoc}">
                 <ListBox.ItemContainerStyle>
                     <Style TargetType="{x:Type ListBoxItem}"
                            BasedOn="{StaticResource {x:Type ListBoxItem}}">
@@ -44,12 +49,14 @@
                                 Value="Transparent" />
 
                         <Setter Property="diag:Attached.InputBindings"
-                                Value="{StaticResource SpecInputBindings}" />
+                                Value="{StaticResource VocInputBindings}" />
                     </Style>
                 </ListBox.ItemContainerStyle>
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock Text="{Binding Title}" />
+                        <TextBlock>
+                            <Run Text="{Binding Title,Mode=OneWay}" /> (<Run Text="{Binding TemplatesCount,Mode=OneWay}" />)
+                        </TextBlock>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
@@ -64,15 +71,19 @@
             </StackPanel>
         </Grid>
 
-        <Grid x:Name="specEditor"
+        <Grid x:Name="vocEditor"
               Margin="10 0 0 0"
               DataContext="{Binding Editor}"
-              d:DataContext="{d:DesignInstance diag:SpecialityEditorViewModel, IsDesignTimeCreatable=False}"
+              d:DataContext="{d:DesignInstance design:SampleVocabularyEditorViewModel,
+                                               IsDesignTimeCreatable=False}"
               Visibility="{Binding DataContext.Editor,
-                                               Converter={StaticResource NotNullToVis}, ElementName=specialities}">
+                                   Converter={StaticResource NotNullToVis},
+                                   ElementName=vocs}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="36" />
                 <RowDefinition Height="auto" />
+                <RowDefinition Height="auto"
+                               MaxHeight="100" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
@@ -91,13 +102,15 @@
             <Label Content="Название"
                    Grid.Row="1" />
             <TextBox Grid.Column="1"
-                     Text="{Binding Speciality.Title, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                     Text="{Binding Vocabulary.Title,
+                                    UpdateSourceTrigger=PropertyChanged,
+                                    ValidatesOnDataErrors=True}"
                      Grid.Row="1" />
 
-            <Label Content="Выберите блоки МКБ"
+            <!--<Label Content="Выберите специальности"
                    Grid.Row="1"
                    Grid.Column="3" />
-            <Label Content="Блоки МКБ"
+            <Label Content="Специальности"
                    Grid.Row="2" />
             <ListBox Grid.Column="1"
                      BorderThickness="1"
@@ -114,15 +127,45 @@
                 <Button Command="{Binding RemoveBlocksCommand}"
                         Margin="5"
                         Content="_Удалить →" />
-            </StackPanel>
+            </StackPanel>-->
 
-            <diag:SearchTree DataContext="{Binding DiagnosisSearch}"
-                             Collection="{Binding DataContext.Chapters, ElementName=specEditor}"
+            <!--<diag:SearchTree DataContext="{Binding DiagnosisSearch}"
+                             Collection="{Binding DataContext.Chapters,
+                                                  ElementName=vocEditor}"
                              TreeBorderThickness="1"
                              Grid.Column="3"
-                             Grid.Row="2" />
+                             Grid.Row="2" />-->
 
-            <StackPanel Grid.Row="3"
+            <Label Content="Слова"
+                   Grid.Row="3" />
+            <StackPanel Margin="10 0"
+                        Grid.Column="3"
+                        Grid.Row="3">
+                <TextBlock Text="Всего слов:" />
+                <TextBlock Text="{Binding TemplatesCount}" />
+
+                <StackPanel Margin="0 10" Visibility="{Binding TooLongTemplates.Count, Converter={StaticResource MoreThanToVisibility}}">
+                    <TextBlock TextWrapping="Wrap">Эти слова длиннее <Run Text="{Binding MaxLength,Mode=OneWay}" /> символов и будут обрезаны:</TextBlock>
+                    <ItemsControl ItemsSource="{Binding TooLongTemplates}" >
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock TextTrimming="CharacterEllipsis" Text="{Binding}"/>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+
+                </StackPanel>
+            </StackPanel>
+            <TextBox Grid.Column="1"
+                     Grid.Row="3"
+                     Text="{Binding TemplatesString,
+                                    UpdateSourceTrigger=PropertyChanged,
+                                    ValidatesOnDataErrors=True}"
+                     ScrollViewer.VerticalScrollBarVisibility="Auto"
+                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                     AcceptsReturn="True" />
+
+            <StackPanel Grid.Row="4"
                         Style="{StaticResource DialogButtonsPanel}"
                         Grid.ColumnSpan="4">
                 <Button Name="saveButton"
