--- a/Diagnosis.Client.App/Resources/ImageResources.xaml
+++ b/Diagnosis.Client.App/Resources/ImageResources.xaml
@@ -16,8 +16,8 @@
                  UriSource="/Resources/Images/DeleteHS.png" />
     <BitmapImage x:Key="editImage"
                  UriSource="/Resources/Images/126_Edit_24x24_72.png" />
-    <BitmapImage x:Key="findImage"
-                 UriSource="/Resources/Images/Find_5650.png" />
+    <!--<BitmapImage x:Key="findImage"
+                 UriSource="/Resources/Images/Find_5650.png" />-->
     <BitmapImage x:Key="sortAscImage"
                  UriSource="/Resources/Images/SortAscending.png" />
     <BitmapImage x:Key="groupByImage"
