card. HrEditor with interval date
--HG--
branch : f/DateOffsetModel

--- a/Diagnosis.Client.App/Controls/FormParts/DateOffsetPicker.xaml
+++ b/Diagnosis.Client.App/Controls/FormParts/DateOffsetPicker.xaml
@@ -49,5 +49,7 @@
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
+        <TextBlock Text="от" Margin="10 0" />
+        <DatePicker Text="{Binding OffsetFrom, Mode=TwoWay}"/>
     </StackPanel>
 </UserControl>
