--- a/Diagnosis.Client.App/Controls/CardParts/HealthRecordEditor.xaml
+++ b/Diagnosis.Client.App/Controls/CardParts/HealthRecordEditor.xaml
@@ -206,24 +206,24 @@
                                 diag:HelpProvider.Topic="hrdate"
                                 Orientation="Horizontal"
                                 ToolTip="Как показывать дату в списке записей?"
-                                Visibility="{Binding DateOffset.IsEmpty, Converter={StaticResource NegBooleanToVisibilityConverter}}">
+                                Visibility="{Binding EventDate.IsEmpty, Converter={StaticResource NegBooleanToVisibilityConverter}}">
                         <Label Content="Это было" />
                         <StackPanel Orientation="Horizontal"
                                     VerticalAlignment="Center">
                             <RadioButton IsChecked="{Binding ShowAsDate}"
                                          Margin="0 0 10 0"
-                                         Content="{Binding DateOffset.PartialDateString}" />
+                                         Content="{Binding EventDate.PartialDateString}" />
                             <RadioButton IsChecked="{Binding ShowAsOffset}"
                                          Margin="0 0 10 0">
                                 <TextBlock>
-                                    <Run Text="{Binding DateOffset.RoundedOffset, Mode=OneWay}" />
-                                    <Hyperlink Command="{Binding DateOffset.SpinUnitCommand}">
+                                    <Run Text="{Binding EventDate.RoundedOffset, Mode=OneWay}" />
+                                    <Hyperlink Command="{Binding EventDate.SpinUnitCommand}">
                                         <Run>
                                             <Run.Text>
                                                 <MultiBinding Mode="OneWay"
                                                               Converter="{StaticResource UnitForOffsetToUnitLabel}">
-                                                    <Binding Path="DateOffset.RoundedUnit" />
-                                                    <Binding Path="DateOffset.RoundedOffset" />
+                                                    <Binding Path="EventDate.RoundedUnit" />
+                                                    <Binding Path="EventDate.RoundedOffset" />
                                                 </MultiBinding>
                                             </Run.Text>
                                         </Run>
@@ -233,7 +233,7 @@
                             <RadioButton IsChecked="{Binding ShowAsAge}"
                                          IsEnabled="{Binding CanShowAsAge}"
                                          Visibility="{Binding CanShowAsAge, Converter={StaticResource BooleanToVisibilityConverter}}"
-                                         Content="{Binding AtAgeString}" />
+                                         Content="{Binding EventDate.AtAgeString}" />
                         </StackPanel>
                     </StackPanel>
                     <Expander x:Name="dateEditor"
@@ -263,7 +263,7 @@
                                                         Value="{DynamicResource LabelFontSize}" />
 
                                                 <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding DateOffset.IsEmpty}"
+                                                    <DataTrigger Binding="{Binding EventDate.IsEmpty}"
                                                                  Value="True">
                                                         <Setter Property="Content"
                                                                 Value="Добавить дату" />
@@ -284,37 +284,94 @@
                         </Expander.Header>
                         <Grid FlowDirection="LeftToRight"
                               Background="Transparent"
+                              DataContext="{Binding EventDate}"
                               Cursor="Arrow">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="auto" />
-                                <ColumnDefinition Width="10"/>
-                                <ColumnDefinition />
-                            </Grid.ColumnDefinitions>
-                            <StackPanel>
-                                <DockPanel>
+                            <StackPanel Grid.IsSharedSizeScope="True">
+                                <StackPanel.Resources>
+                                    <Style TargetType="Grid">
+                                        <Setter Property="Margin"
+                                                Value="{StaticResource FormLineMargin}" />
+                                    </Style>
+                                </StackPanel.Resources>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="auto" />
+                                        <ColumnDefinition Width="auto"
+                                                          SharedSizeGroup="gr2" />
+                                        <ColumnDefinition Width="20" />
+                                        <ColumnDefinition />
+                                    </Grid.ColumnDefinitions>
+                                    <Label />
+                                    <CheckBox IsChecked="{Binding IsInterval}"
+                                              Grid.Column="3"
+                                              Content="Интервал" />
+                                </Grid>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="auto" />
+                                        <ColumnDefinition Width="auto"
+                                                          SharedSizeGroup="gr2" />
+                                        <ColumnDefinition Width="20" />
+                                        <ColumnDefinition />
+                                    </Grid.ColumnDefinitions>
                                     <Label Content="Дата" />
-                                    <forms:ComboBoxDatePicker Year="{Binding DateOffset.Year, Mode=TwoWay}"
-                                                              Month="{Binding DateOffset.Month, Mode=TwoWay}"
-                                                              Day="{Binding DateOffset.Day, Mode=TwoWay}"
-                                                              WithPicker="True" />
-                                </DockPanel>
+                                    <forms:ComboBoxDatePicker Year="{Binding Year, Mode=TwoWay}"
+                                                              Month="{Binding Month, Mode=TwoWay}"
+                                                              Day="{Binding Day, Mode=TwoWay}"
+                                                              WithPicker="True"
+                                                              Grid.Column="1" />
+                                    <TextBlock Text="—"
+                                               Visibility="{Binding IsInterval,Converter={StaticResource BooleanToVisibilityConverter}}"
+                                               Grid.Column="2" />
+                                    <forms:ComboBoxDatePicker Visibility="{Binding IsInterval,Converter={StaticResource BooleanToVisibilityConverter}}"
+                                                              Year="{Binding ToYear, Mode=TwoWay}"
+                                                              Month="{Binding ToMonth, Mode=TwoWay}"
+                                                              Day="{Binding ToDay, Mode=TwoWay}"
+                                                              WithPicker="True"
+                                                              Grid.Column="3" />
+                                </Grid>
                                 <DockPanel>
                                     <Label Content="Давность" />
-                                    <forms:DateOffsetPicker DataContext="{Binding DateOffset}" />
+                                    <forms:DateOffsetPicker />
                                 </DockPanel>
-                                <DockPanel IsEnabled="{Binding CanShowAsAge}">
+                                <Grid IsEnabled="{Binding CanShowAsAge}">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="auto" />
+                                        <ColumnDefinition Width="auto"
+                                                          SharedSizeGroup="gr2" />
+                                        <ColumnDefinition Width="20" />
+                                        <ColumnDefinition />
+                                    </Grid.ColumnDefinitions>
                                     <Label Content="Возраст" />
-                                    <TextBox Text="{Binding AtAge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, TargetNullValue=''}"
-                                             Width="50"
-                                             HorizontalContentAlignment="Right">
-                                    </TextBox>
+                                    <DockPanel Grid.Column="1">
+                                        <TextBox Text="{Binding AtAge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, TargetNullValue=''}"
+                                                 Width="50"
+                                                 HorizontalContentAlignment="Right">
+                                        </TextBox>
 
-                                    <TextBlock Text="{Binding AtAge, Converter={StaticResource AgeToLabel}}"
-                                               Margin="3,0,0,0"
-                                               VerticalAlignment="Center"></TextBlock>
-                                </DockPanel>
+                                        <TextBlock Text="{Binding AtAge, Converter={StaticResource AgeToLabel}}"
+                                                   Margin="3,0,0,0"
+                                                   VerticalAlignment="Center"></TextBlock>
+                                    </DockPanel>
+                                    <TextBlock Text="до"
+                                               Visibility="{Binding IsInterval,Converter={StaticResource BooleanToVisibilityConverter}}"
+                                               Grid.Column="2" />
+                                    <DockPanel Grid.Column="3">
+                                        <TextBox Text="{Binding ToAtAge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, TargetNullValue=''}"
+                                                 Width="50"
+                                                 Visibility="{Binding IsInterval,Converter={StaticResource BooleanToVisibilityConverter}}"
+                                                 HorizontalContentAlignment="Right">
+                                        </TextBox>
+
+                                        <TextBlock Text="{Binding ToAtAge, Converter={StaticResource AgeToLabel}}"
+                                                   Margin="3,0,0,0"
+                                                   VerticalAlignment="Center" />
+                                    </DockPanel>
+                                </Grid>
                             </StackPanel>
+
                             <StackPanel Grid.Column="2"
+                                        HorizontalAlignment="Right"
                                         Visibility="{Binding DateSuggestions.Count, Converter={StaticResource MoreThanToVisibility}}">
                                 <TextBlock Text="Вставить:" />
                                 <ItemsControl ItemsSource="{Binding DateSuggestions}">
@@ -333,8 +390,6 @@
                     </Expander>
                 </Grid>
             </DockPanel>
-
-            
         </StackPanel>
     </Grid>
 </UserControl>
